fix nom onglets + vertical align pour ma commande

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -210,3 +210,10 @@ h1
   font-family: Verdana;
   font-size: 30px;
 }
+
+.commande_articles {
+ text-align: center;
+ margin-top: -475px;
+  /* margin-left: auto;
+  margin-right: auto; */
+}
